--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ SECRET_KEY=your-secret-key-change-this-in-production
 API_KEY=your-api-key-for-admin-endpoints
 
 # CORS Configuration (comma-separated list of allowed origins)
-ALLOWED_ORIGINS=https://your-store.myshopify.com,http://localhost:3000
+# Use *.myshopify.com to allow all Shopify stores
+ALLOWED_ORIGINS=*.myshopify.com,http://localhost:5000
 
 # Server Configuration
 PORT=5000
